Finishing and deploying

--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"assets/images/muqimiy.png":["assets/images/muqimiy.png"],"assets/images/text.png":["assets/images/text.png"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"assets/audio/audio1.mp3":["assets/audio/audio1.mp3"],"assets/images/hero.jpg":["assets/images/hero.jpg"],"assets/images/muqimiy.png":["assets/images/muqimiy.png"],"assets/images/text.png":["assets/images/text.png"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
